DivisionManager Controller revised

--- a/ISIProject/Views/DivisionManager/Delete.cshtml
+++ b/ISIProject/Views/DivisionManager/Delete.cshtml
@@ -18,10 +18,10 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.DivisionManager.UserName)
+        @Html.DisplayName("Manager")
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.DivisionManager.UserName)
+        @Html.DisplayFor(model => model.DivisionManager.Name)
     </div>
 </fieldset>
 @using (Html.BeginForm()) {
