--- a/ISIProject/Views/Shared/_Layout.cshtml
+++ b/ISIProject/Views/Shared/_Layout.cshtml
@@ -22,6 +22,8 @@
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Division","Index","DivisionManager")</li>
+                            <li>@Html.ActionLink("Department","Index","DepartmentManager")</li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                         </ul>
                     </nav>
