--- a/ISIProject/Views/DivisionManager/Index.cshtml
+++ b/ISIProject/Views/DivisionManager/Index.cshtml
@@ -11,7 +11,7 @@
 </p>
 <table>
     <tr>
-        <th>
+        <th style="padding-right:10px">
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
