Revert "Employee manager"
This reverts commit 81af7da033c1d90463f067f58a2f0e4abcae83ee.

--- a/ISIProject/Views/Shared/_Layout.cshtml
+++ b/ISIProject/Views/Shared/_Layout.cshtml
@@ -21,15 +21,10 @@
                     </section>
                     <nav>
                         <ul id="menu">
-                            @*<li>@User.Identity.Name</li>*@
-                            @if (Roles.IsUserInRole("Administrator"))                        
-                            {
-                                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                                <li>@Html.ActionLink("Divisions","Index","DivisionManager")</li>
-                                <li>@Html.ActionLink("Departments","Index","DepartmentManager")</li>
-                                <li>@Html.ActionLink("Employees", "Index", "EmployeeManager")</li>
-                                <li>@Html.ActionLink("About", "About", "Home")</li>
-                            }
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Division","Index","DivisionManager")</li>
+                            <li>@Html.ActionLink("Department","Index","DepartmentManager")</li>
+                            <li>@Html.ActionLink("About", "About", "Home")</li>
                         </ul>
                     </nav>
                 </div>
