--- a/ISIProject/Views/Account/Login.cshtml
+++ b/ISIProject/Views/Account/Login.cshtml
@@ -34,6 +34,9 @@
         </ol>
         <input type="submit" value="Log in" />
     </fieldset>
+    <p>
+        @Html.ActionLink("Register", "Register") if you don't have an account.
+    </p>
 }
 </section>
 
