--- a/ISIProject/Views/DivisionManager/Create.cshtml
+++ b/ISIProject/Views/DivisionManager/Create.cshtml
@@ -12,7 +12,7 @@
 
     <fieldset>
         <legend>Division</legend>
-
+        @Html.ValidationMessage("UniqueName")
         <div class="editor-label">
             @Html.LabelFor(model => model.Name)
         </div>
