--- a/ISIProject/Views/Shared/_Layout.cshtml
+++ b/ISIProject/Views/Shared/_Layout.cshtml
@@ -7,6 +7,11 @@
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
+
+        @if (IsSectionDefined("AddToHead"))
+        {
+            @RenderSection("AddToHead", required: false)
+        }
     </head>
     <body>
         <header>
