--- a/ISIProject/Views/Timesheet/Index.cshtml
+++ b/ISIProject/Views/Timesheet/Index.cshtml
@@ -1,5 +1,15 @@
 ﻿@{
     ViewBag.Title = "Index";
+ }
+
+@section AddToHead{
+    <link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/smoothness/jquery-ui.css' />
+    <link href="~/Content/themes/base/jquery.weekcalendar.css" rel="stylesheet" />
+
+    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script>
+    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'></script>
+    <script type='text/javascript' src="~/Scripts/jquery.weekcalendar.js"></script>
 }
 
 <h2>Index</h2>
+<div id='calendar'></div>
