Working Search and started Check Boxes

--- a/ISIProject/Content/Site.css
+++ b/ISIProject/Content/Site.css
@@ -453,6 +453,11 @@ input[type="checkbox"] {
     width: auto;
 }
 
+input[type="radio"] {
+    width: auto;
+    background: inherit;
+}
+
 input[type="submit"],
 input[type="button"],
 button {
