--- a/ISIProject/Views/DeptManagerEmployee/Index.cshtml
+++ b/ISIProject/Views/DeptManagerEmployee/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Add Employees</h2>
+<h2>Manage Employees</h2>
 @using (Html.BeginForm()) 
 {
     <p>Search by:</p>
@@ -57,5 +57,5 @@
         }
     </table>
     
-    <input type="submit" name="submitButton" value="Add" />
+    <input type="submit" name="submitButton" value="Save" />
 }
