Worked on timesheets

--- a/ISIProject/Views/Timesheet/Index.cshtml
+++ b/ISIProject/Views/Timesheet/Index.cshtml
@@ -37,21 +37,18 @@
                     </select>
                 </li>
                 <li>
-                    <label for="client">Client: </label>
-                    <select name="client">
-                        <option value="-1">Select Client</option>
-                    </select>
-                </li>
-                <li>
-                    <label for="product">Product: </label>
-                    <select name="product">
-                        <option value="-1">Select Product</option>
-                    </select>
-                </li>
-                <li>
                     <label for="activity">Activity: </label>
                     <select name="activity">
-                        <option value="-1">Select Activity</option>
+                    </select>
+                </li>
+                <li>
+                    <label for="client">Client: </label>
+                    <select name="client">
+                    </select>
+                </li>
+                <li>
+                    <label for="project">Project: </label>
+                    <select name="project">
                     </select>
                 </li>
             </ul>
