Audit functionality added

--- a/ISIProject/Views/DepartmentManager/Index.cshtml
+++ b/ISIProject/Views/DepartmentManager/Index.cshtml
@@ -14,7 +14,7 @@
         <th style="padding-right:10px">
             @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th>
+        <th style="padding-right:10px">
             @Html.DisplayName("Division")
         </th>
         <th>
