Added audit necessary logging and Send button on Timesheet

--- a/ISIProject/Views/Audit/Index.cshtml
+++ b/ISIProject/Views/Audit/Index.cshtml
@@ -88,6 +88,5 @@
             </tr>
         }
     </table>
-    
-    <input type="submit" name="startButton" value="Save" />
+    <input type="submit" name="submitButton" value="Save" />
 }
