Department Manager Reports Added

--- a/ISIProject/Views/EmployeeTimesheet/Index.cshtml
+++ b/ISIProject/Views/EmployeeTimesheet/Index.cshtml
@@ -24,7 +24,7 @@
 
 <p>
     Date:
-    <input type="text" id="datepicker" size="30px">
+    <input type="text" id="datepicker">
     <input type="button" id="btnDuplicate" value="Duplicate" />
 </p>
 <div id='calendar'></div>
