--- a/ISIProject/Views/EmployeeTimesheet/Index.cshtml
+++ b/ISIProject/Views/EmployeeTimesheet/Index.cshtml
@@ -20,8 +20,11 @@
     {
     <input type="submit" name="submitButton" value="Send" />
     }
+    else
+    {
+    <input type="button" id="btnSave" value="Save">
+    }
 }
-
 <p>
     Date:
     <input type="text" id="datepicker">
